--- a/example/index.html
+++ b/example/index.html
@@ -46,7 +46,7 @@
   
   <!-- <canvas id="canvasTable" width="2100px" height="5000px"></canvas> -->
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <script src="../dist/app.bundle.js"></script>
+  <script src="../dist/bundle.js"></script>
   <script src="./main.js"></script>
   
 </body>
