mobx store added for state management

--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Pivoting Tables</title>
+  <title>Bar-Table Interaction</title>
   <style>
       .axis {
           font: 10px sans-serif;
@@ -43,9 +43,7 @@
         <a href="#" onclick="incr()">&#8658;</a>
     </div>
   </div>
-  
-  <!-- <canvas id="canvasTable" width="2100px" height="5000px"></canvas> -->
-  <script src="https://d3js.org/d3.v4.min.js"></script>
+
   <script src="../dist/bundle.js"></script>
   <script src="./main.js"></script>
   
